# custom_liquid_class_finder

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_README.md  LIQUID_CLASS_README.md  LOGGING_FEATURES.md  MANIFEST.in  Makefile  OPTIMIZATION_IMPROVEMENTS.md  README.md  README_PYPI.md  demo_liquid_classes.py  liquid_class_demo.py  liquid_class_manager.py  liquid_classes.csv  liquid_classes.py  protocol.py  protocol_8channel_single.py  protocol_batch.py  protocol_env.py  protocol_single_channel.py  pyproject.toml  requirements.txt  run_simulation.py  run_simulation_8channel.py  run_simulation_batch.py  test_liquid_classes.py  test_logging.py  test_optimization.py  test_optimization_strategies.py  test_parameter_bounds.py  test_protocol_import.py
.github/workflows/: ci-cd.yml
config/: example_config.json
docs/: CLI_README.md  DEVELOPMENT.md  LIQUID_CLASS_README.md  OPTIMIZATION_STRATEGIES.md  PYPI_SETUP.md
liquids/: __init__.py  liquid_class_demo_basic.py  liquid_class_demo_custom.py  liquid_class_manager.py  liquid_classes.csv  liquid_classes.py
protocols/: __init__.py  eight_channel.py  optimization_strategies.py  single_channel.py  single_channel_refactored.py
protocols/optimization_strategies/: __init__.py  base.py  coordinate_descent.py  factory.py  hybrid.py  simultaneous.py
scripts/: setup_dev.py  setup_pypi.py
tests/: __init__.py  test_liquid_classes.py  test_logging.py  test_optimization.py  test_optimization_strategies.py  test_parameter_bounds.py  test_protocol.py  test_protocol_import.py
