[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_liquid_class_finder"
version = "0.0.1"
description = "Liquid Class Calibration with Gradient Descent for Opentrons"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Roman Gurovich", email = "romangurovich@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "opentrons>=6.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/LiquidLib/custom_liquid_class_finder"
Repository = "https://github.com/LiquidLib/custom_liquid_class_finder"
Issues = "https://github.com/LiquidLib/custom_liquid_class_finder/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "protocol.py",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
